# proto-hal

./: Cargo.toml  README.md
examples/delay/: Cargo.toml
examples/delay/src/: lib.rs
examples/teensy4/: Cargo.toml  README.md  main.hex
examples/teensy4/src/: main.rs
proto-hal/: Cargo.toml
proto-hal/src/: ccm.rs  gpio.rs  gpt.rs  lib.rs  uart.rs
proto-hal/src/ccm/: perclock.rs  uart.rs
proto-ral/: Cargo.toml  build.rs
proto-ral/src/: gpio.rs  gpt.rs  lib.rs  lpuart.rs  runtime.rs
proto-ral/src/gpio/: fields.rs  instances.rs
proto-ral/src/gpt/: fields.rs  instances.rs
proto-ral/src/lpuart/: fields.rs  instances.rs
proto-ral/src/runtime/: imxrt1010.rs  imxrt1060.rs
