[package]
name = "proto-hal"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.proto-ral]
path = "../proto-ral"

[dependencies.imxrt-iomuxc]
git = "https://github.com/imxrt-rs/imxrt-rs"
branch = "clear-chip-ids"

[features]
imxrt1010 = ["proto-ral/imxrt1010", "imxrt-iomuxc/imxrt1010"]
imxrt1060 = ["proto-ral/imxrt1060", "imxrt-iomuxc/imxrt1060"]
