[package]
name = "proto-ral"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6"

[dependencies.bare-metal]
optional = true
version = "0.2.5"

[features]
imxrt1010 = []
imxrt1060 = []
rt = ["bare-metal"]